--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@ main{
     gap: 20px;
 }
 h1{
-    font-size: 100px;
+    font-size: clamp( 40px,8vw,100px );
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
 .descricao{
-    font-size: 50px;
+    font-size: clamp(20px,4vw,50px);
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
@@ -47,5 +47,6 @@ h1{
     cursor: pointer;
     margin-top: 20px;
     font-family: 'Montserrat', sans-serif;
+    font-size: 40;
     
 }
